--- a/src/view/home.ejs
+++ b/src/view/home.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="/img/logo_webQuizzer.png">
+  <link rel="icon" type="image/png" href="/img/Logo.png">
 
   <title>WebQuizzer – Accueil</title>
   <link rel="stylesheet" href="../home.css" />
