--- a/src/view/myallquiz.ejs
+++ b/src/view/myallquiz.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/img/Logo.png">
     <title>WebQuizzer – Tous les quiz</title>
     <link rel="stylesheet" href="/allquiz.css" />
     <link rel="stylesheet" href="/home.css" />
