--- a/src/view/error.ejs
+++ b/src/view/error.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/img/Logo.png">
     <title>Erreur</title>
     <style>
         body {
