--- a/src/view/profile.ejs
+++ b/src/view/profile.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/img/Logo.png">
     <title>Mon Profil - Quiz App</title>
     <link rel="stylesheet" href="/home.css" />
     <link rel="stylesheet" href="/profile.css" />
